namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-research-app
  labels:
    name: dev-research-app
