ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: research-app-ingress
  namespace: dev-research-app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: YOUR_DOMAIN_OR_PUBLIC_IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
